interface IRoom {
    create(): Promise<string>;

}