@startuml
package Room{

    interface IRoom{
        attemptToEnter
        leaveCurrentRoom
        createRoom
        createUserDefaultRoom
        createInformationRoom
        addAccessableRooms
        getTalkRooms
        getInformationRoom
        isAccessableRooms
        getAccessableRooms
        getInformationRoomId
        getDirectMessageRoom
        getDirectMessageRoomInfo
        getRoomEventEmitter

    }

    interface IRoomRegister{
        registe()
    }

    class Room{

    }

    IRoom <.. Room
    IRoomRegister <.. Room



}
@enduml